# embedded-playground

./: Cargo.toml  Makefile  README.md  ble-client.py  data.csv  uncalibrated.csv
.github/workflows/: ci.yml  docs.yml
ble-client/: Cargo.toml
ble-client/src/: main.rs
ble-client/src/application/: mod.rs  ui.rs  usecase.rs
ble-client/src/infrastructure/: mod.rs
ble-client/src/infrastructure/ble/: mod.rs
ble-client/src/infrastructure/term/: mod.rs  widgets.rs
humidity/: Cargo.toml
humidity-core/: Cargo.toml  Makefile
humidity-core/.cargo/: config.toml
humidity-core/src/: lib.rs
humidity-core/src/historical/: mod.rs
humidity-core/src/sample/: de.rs  mod.rs  result.rs  sensor.rs  ser.rs  summary.rs
humidity-core/src/sensors/: hygrometer.rs  mod.rs
humidity-core/src/serde/: de.rs  mod.rs  ser.rs
humidity-core/src/share/: mod.rs
humidity-monitor/: Cargo.toml
humidity-monitor-c6/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
humidity-monitor-c6/.cargo/: config.toml
humidity-monitor-c6/src/: blessed.rs  main.rs
humidity-monitor/.cargo/: config.toml
humidity-monitor/src/: main.rs
humidity/src/: main.rs
src/: main.rs
toolbox/: Cargo.toml
toolbox/src/: fmt.rs  lib.rs
toy-c6/: Cargo.toml  rust-toolchain.toml
toy-c6/.cargo/: config.toml
toy-c6/src/: ble.rs  main.rs
