[package]
name = "watermelon"
version = "0.1.0"
authors = ["Alexandre Vinyals Valdepeñas <alevinval@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.12.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { path = "../esp-hal/esp-hal", features = [ "esp32s3"] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async   = "0.6.1"
esp-wifi = { path = "../esp-hal/esp-wifi", features = [
    "esp32s3",
    "phy-enable-usb",
    "utils",
    "wifi",
    "ble",
] }

heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
fugit = "0.3.7"
bleps               = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }
esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy", features = ["esp32s3", "time-timg0"] }
embassy-executor    = { version = "0.5.0", features = ["task-arena-size-40960"] }

format_no_std = { version = "1.2.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
