[package]
name = "plantastic"
version = "0.1.0"
authors = ["Alexandre Vinyals<alevinval@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.12.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { path = "../esp-hal/esp-hal", features = [ "esp32s3"] }
esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy", features = ["esp32s3", "time-timg0"] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
esp-wifi = { path = "../esp-hal/esp-wifi", features = [
    "esp32s3",
    "ble",
] }

format_no_std = { version = "1.2.0" }
log = { version = "0.4.21" }
fugit = "0.3.7"
bleps= { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
