[package]
name = "humidity-esp32c6"
version = "0.1.0"
edition = "2021"

[dependencies]
humidity-core = { path = "../humidity-core" }

log = "0.4.21"
fugit = "0.3.7"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", branch = "main", features = [
    "macros",
    "async",
] }

esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main", features = [
    "esp32c6",
    "log",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main", features = [
    "esp32c6",
] }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main", features = [
    "esp32c6",
    "ble",
] }

[profile.dev]
opt-level = 3
incremental = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[profile.release.package.esp-wifi]
opt-level = 3
