[package]
name = "humidity"
version = "0.1.0"
edition = "2021"

[dependencies]
toolbox = { path = "../toolbox" }
humidity-core = { path = "../humidity-core" }

log = "0.4.21"
fugit = "0.3.7"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
    "macros",
    "async",
] }

esp-backtrace = { path = "../../esp-hal/esp-backtrace", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { path = "../../esp-hal/esp-println", features = [
    "esp32s3",
    "log",
] }
esp-hal = { path = "../../esp-hal/esp-hal", features = [
    "esp32s3",
    "embedded-hal-02",
] }
esp-wifi = { path = "../../esp-hal/esp-wifi", features = ["esp32s3", "ble"] }
embedded-hal = "*"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3
incremental = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
