[package]
name = "toy-c6"
version = "0.1.0"
edition = "2021"

[dependencies]
bt-hci = { version = "0.2.1" }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }
embassy-futures = "0.1.1"
embassy-time = "0.4.0"
trouble-host = { version = "0.1.0", features = [
    "derive",
    "scan",
    "central",
    "gatt",
    "peripheral",
] }
esp-backtrace = { version = "0.15", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-alloc = { version = "0.7.0" }
esp-hal = { version = "1.0.0-beta.0", features = ["unstable"] }
esp-hal-embassy = { version = "0.7.0" }
esp-println = { version = "0.13.0", features = ["log"] }
esp-wifi = { version = "0.13.0", features = ["ble"] }
log = "0.4.27"
embedded-hal = "1.0.0"
embassy-sync = "0.6.2"
static_cell = "2.1.0"

[features]
default = ["esp32c6"]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-println/esp32c6",
    "esp-wifi/esp32c6",
]

[profile.dev]
opt-level = "s"
incremental = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false
